# hivemind

./: .gitignore  .hivemind.toml  .justfile  CLAUDE.md  Cargo.toml  HIVEMIND_SPEC.md  PRODUCT.md  README.md  build.rs  release.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: build.yml  ci.yml  publish.yml  pull-request.yml
dashboard/: .justfile  index.html  package.json  vite.config.js
dashboard/src/: App.vue  style.css
dashboard/src/api/: client.js  edges.js  feedback.js  memories.js  sessionLogs.js  settings.js  suggest.js  update.js
dashboard/src/components/analytics/: BarChart.vue  SessionLogRow.vue
dashboard/src/components/feedback/: ConflictCard.vue  FeedbackCard.vue
dashboard/src/components/graph/: DetailPanel.vue  EdgeCard.vue  GraphCanvas.vue  GraphToolbar.vue  Legend.vue  MiniCard.vue  PendingBar.vue  RelationshipPicker.vue  SuggestPanel.vue
dashboard/src/components/memories/: DeleteConfirmModal.vue  MemoryCard.vue  MemoryDetail.vue  MemoryList.vue  NewMemoryModal.vue
dashboard/src/components/settings/: AppearanceSection.vue  DangerModal.vue  DangerSection.vue  DataSection.vue  LimitsSection.vue  ServerSection.vue  SettingsTabs.vue  SyncSection.vue  TagsSection.vue
dashboard/src/components/shared/: ConfirmModal.vue  CopyButton.vue  CopyIdButton.vue  EmptyState.vue  FilterChip.vue  LayerBadge.vue  MarkdownContent.vue  PendingBar.vue  SkeletonCard.vue  TagChip.vue  TagFilter.vue  TagInput.vue  Toast.vue  Tooltip.vue
dashboard/src/components/sidebar/: AppSidebar.vue  StatusRow.vue
dashboard/src/components/update/: UpdateModal.vue
dashboard/src/lib/: caret.js  format.js  mention.js
dashboard/src/stores/: analytics.js  contentLimitSettings.js  feedback.js  fontScale.js  graph.js  memories.js  suggest.js  tagSettings.js  theme.js  ui.js  update.js
dashboard/src/views/: AnalyticsView.vue  FeedbackView.vue  GraphView.vue  MemoriesView.vue  SettingsView.vue
docs/: INTEGRATING.md
docs/api/: bruno.json
docs/api/conflicts/: list-conflicts.bru  resolve-conflict.bru
docs/api/edges/: create-edge.bru  list-edges.bru  patch-edge.bru
docs/api/environments/: local.bru
docs/api/feedback/: create-feedback.bru  list-feedback.bru  patch-feedback.bru
docs/api/memories/: create-memory.bru  delete-memory.bru  get-memory.bru  list-memories.bru  patch-memory.bru
docs/api/search/: search-memories.bru
docs/api/settings/: get-sync-settings.bru  save-sync-settings.bru
docs/api/sync/: server-status.bru  sync-pull.bru  sync-push.bru  sync-status.bru
docs/superpowers/plans/: 2026-06-11-hivemind-phase1.md  2026-06-17-github-workflows.md  2026-07-13-boolean-tag-recall.md  2026-07-13-tag-namespace-system.md
docs/superpowers/specs/: 2026-06-14-hivemind-dashboard-design.md  2026-06-17-github-workflows-design.md  2026-07-13-boolean-tag-recall-design.md  2026-07-13-graph-canvas-interactivity-design.md  2026-07-13-tag-namespace-system-design.md
migrations/: V1__initial_schema.sql  V2__layers_conflicts_meta.sql  V3__session_start_log.sql  V4__mention_edges.sql  V5__relationship_taxonomy.sql  V6__legacy_relationship_cleanup.sql  V7__edge_reason.sql
plugins/claude/skills/: memory-connections.md  memory-edit.md  memory-list.md  memory-search.md  memory-store.md
plugins/opencode/: hivemind.ts  package.json
plugins/opencode/scripts/: resolve-skills.ts
plugins/skills/: memory-edit.md  memory-list.md  memory-search.md  memory-status.md
recipes/: cargo.just  keyring.just  release.just
src/: api.rs  api_tests.rs  budget.rs  cli.rs  cli_tests.rs  config.rs  dashboard_placeholder.html  db.rs  http.rs  lib.rs  main.rs  model.rs  server.rs  server_tests.rs  session.rs  store.rs  store_tests.rs  suggest_session.rs  sync.rs  tag_query.rs  test_env_lock.rs  update.rs
src/api/: edges.rs  feedback.rs  memories.rs  mod.rs  settings.rs  status.rs  suggest.rs  tests.rs  transfer.rs  update.rs
src/cli/: init.rs  matrix_cmds.rs  mcp_install.rs  mod.rs  service.rs  status.rs  tests.rs
src/matrix/: agent.rs  commands.rs  daemon.rs  keyring_store.rs  login.rs  mod.rs  rooms.rs  session.rs  status.rs  store_direct.rs
src/tui/: header.rs  mod.rs  status_view.rs  up_view.rs
tests/: api_integration.rs
(+6 files in other folders)
