[package]
name = "oxhivemind"
version = "0.1.0"
edition = "2024"
description = "A persistent memory MCP server for AI agents"
license = "AGPL-3.0-only"
keywords = ["mcp", "memory", "ai", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hivemind"
path = "src/main.rs"

[lib]
name = "oxhivemind"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1", features = ["server", "macros", "transport-streamable-http-server"] }
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
rusqlite = { version = "0.33", features = ["bundled"] }
refinery = { version = "0.8", features = ["rusqlite"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "0.8"
tiktoken-rs = "0.5"
include_dir = "0.7"
mime_guess = "2"
reqwest = { version = "0.12", features = ["json"] }

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
