[package]
name = "oxhivemind"
version = "0.1.0"
edition = "2024"
description = "A persistent memory MCP server for AI agents"
license = "AGPL-3.0-only"
keywords = ["mcp", "memory", "ai", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "hivemind"
path = "src/main.rs"

[lib]
name = "oxhivemind"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "1", features = [
  "server",
  "macros",
  "transport-streamable-http-server",
] }
axum = "0.8"
tower-http = { version = "0.7", features = ["cors"] }
libsql = { version = "0.9", features = ["core", "replication"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4", features = ["derive"] }
toml = "1.1"
tiktoken-rs = "0.12"
include_dir = "0.7"
mime_guess = "2"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
