[package]
name = "oxhivemind"
version = "0.13.0"
edition = "2024"
description = "A persistent memory MCP server for AI agents"
repository = "https://github.com/oxhive/hivemind"
license = "AGPL-3.0-only"
keywords = ["mcp", "memory", "ai", "agent", "cli"]
categories = ["command-line-utilities", "development-tools"]

[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/hivemind-{ target }.tar.gz"
bin-dir = "hivemind"
pkg-fmt = "tgz"

[[bin]]
name = "hivemind"
path = "src/main.rs"

[lib]
name = "oxhivemind"
path = "src/lib.rs"

[dependencies]
rmcp = { version = "2", features = ["server", "macros", "transport-streamable-http-server", "transport-child-process", "client"] }
axum = "0.8"
tower-http = { version = "0.7", features = ["cors"] }
libsql = { version = "0.9", features = ["core", "replication"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tokio-stream = { version = "0.1", features = ["sync"] }
clap = { version = "4", features = ["derive"] }
toml = "1.1"
tiktoken-rs = "0.12"
include_dir = "0.7"
mime_guess = "2"
regex = "1"
ratatui = "0.30.2"
crossterm = "0.29.0"
libc = "0.2.186"
matrix-sdk = { version = "0.18.0", features = ["e2e-encryption", "sqlite"] }
keyring = "4.1.5"
rpassword = "7.5.4"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
semver = "1"

[dev-dependencies]
tempfile = "3"
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
keyring-core = "1.0.0"
